# brutal-csv

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
src/: lib.rs
src/dialects/: mod.rs
src/dialects/key_value/: detector.rs
src/dialects/single_byte/: detector.rs
tests/: .env.example  README.md  draft.md  edge_cases.rs  escaping.rs  generic_csv.rs  headers.rs  key_value.rs  line_endings.rs  multiline_fields.rs  normalization.rs  pollock_benchmark.rs  quoting.rs  separators.rs  trailing_separator.rs
tests/common/: mod.rs
