[package]
name = "brutal-csv"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] , optional = true }
indicatif = { version = "0.17.8" , optional = true }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] , optional = true }
owo-colors = "4"
miette = { version = "7", features = ["fancy"], optional = true }
dotenv = "0.15.0"
# annotate-snippets = { version = "0.12", optional = true }

[features]
binary = ["dep:clap", "dep:clio"]
progress = ["dep:indicatif", "binary"]
debug = ["dep:miette"]
# debug = ["dep:annotate-snippets"]

[dev-dependencies]
brutal-csv = { path = ".", features = ["debug"] }
rust-s3 = { version = "0.37", default-features = false, features = ["sync-native-tls", "fail-on-err"] }
serde_json = "1"

[[bin]]
name = "csv2asv"
required-features = ["binary"]
